# Antimony-III

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  get_packages.sh  git-repo-build-and-install.sh  rebuild.sh
.github/workflows/: c-cpp.yml
cmake/: macros.cmake
src/: GID_SDL.h
src/antimony/: antimony.cpp  antimony.h
src/antimony/core/: events.cpp  events.h
src/antimony/input/: mouse.h
src/antimony/ui/: menu.h
src/ozymandias/: main.cpp
